Added: CartModal Component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,21 @@
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ff7f00; /* Use the same color as your navbar */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ff6600;
+}
